--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "name": "闪电侠",
     "email": "qinchende@qq.com"
   },
-  "contributors": [],
+  "contributors": [{
+    "name": "闪电侠",
+    "url": "http://chende.ren"
+  }],
   "dependencies": {
   },
   "deprecated": false,
@@ -24,7 +27,7 @@
   "keywords": [
   ],
   "license": "MIT",
-  "main": "app.js",
+  "main": "index.html",
   "name": "n-sentinel-view",
   "scripts": {
   },
